# basic_personal_rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: ingestion.py  query.py
app/core/: config.py
app/services/: ingestion_service.py  query_service.py
